--- a/Backend/Backend.DataAccess/Backend.DataAccess.csproj
+++ b/Backend/Backend.DataAccess/Backend.DataAccess.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+	  <PackageReference Include="Azure.Data.Tables" Version="12.8.3" />
 	  <PackageReference Include="Azure.Storage.Blobs" Version="12.19.1" />
 	  <PackageReference Include="Azure.Storage.Queues" Version="12.17.1" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Cosmos" Version="8.0.1" />
