--- a/Backend/Backend.Services/Backend.Services.csproj
+++ b/Backend/Backend.Services/Backend.Services.csproj
@@ -3,12 +3,12 @@
     <TargetFramework>net8.0</TargetFramework>
     <AzureFunctionsVersion>v4</AzureFunctionsVersion>
     <OutputType>Exe</OutputType>
-    <DockerFastModeProjectMountDirectory>/home/site/wwwroot</DockerFastModeProjectMountDirectory>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
   <ItemGroup>
 
 	  <PackageReference Include="HttpMultipartParser" Version="8.3.0" />
+
+	  <PackageReference Include="Ical.Net.NetCore" Version="4.1.11" />
 	  <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.Abstractions" Version="1.3.0" />
 	  <PackageReference Include="Microsoft.Azure.AppConfiguration.Functions.Worker" Version="7.0.0" />
 	  <PackageReference Include="Microsoft.Azure.Functions.Worker.Extensions.CosmosDB" Version="4.6.0" />
