Fix splash screen

--- a/App/Eventos/Eventos.csproj
+++ b/App/Eventos/Eventos.csproj
@@ -32,7 +32,7 @@
 		</MauiIcon>
 
 		<!-- Splash Screen -->
-		<MauiSplashScreen Include="Resources\Splash\splash.svg">
+		<MauiSplashScreen Include="Resources\Splash\splash.svg" color="#184159">
 		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</MauiSplashScreen>
 
