--- a/App/Eventos/Platforms/iOS/Info.plist
+++ b/App/Eventos/Platforms/iOS/Info.plist
@@ -28,5 +28,7 @@
 	<string>Assets.xcassets/appicon.appiconset</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.companyname.recuerdame</string>
+	<key>UIUserInterfaceStyle</key>
+	<string>Light</string>
 </dict>
 </plist>
